--- a/style.css
+++ b/style.css
@@ -1242,7 +1242,8 @@ article{
 --------------------------------------------------------------*/
 .woocommerce-Address{
 	border: 3px dotted #333;
-	height: 100%
+	height: 100%;
+	margin: 1rem 0;
 }
 
 .woocommerce-Address-title{
