--- a/style.css
+++ b/style.css
@@ -1636,6 +1636,13 @@ a.checkout-step, a.checkout-step:hover, a.checkout-step:visited{
 	height: 50px;
 }
 
+.preview{
+	font-size: 14px;
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+}
+
 
 .order-total
 /*--------------------------------------------------------------
